# hypergrid

./: .cruft.json  .gitignore  Justfile  Pipfile  README.md  pyproject.toml
.github/workflows/: pr.yaml  register.yaml
src/hypergrid/: dimension.py  dsl.py  grid.py  sampling.py  util.py
src/hypergrid/ext/: sklearn.py
tests/hypergrid/: test_dimension.py  test_grid.py  test_hypergrid.py
tests/hypergrid/ext/: test_sklearn.py
