[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hypergrid"
version = "0.0.1a1"
authors = [
    { name="Justin Yan", email="justin@iomorphic.com" }
]
description = "Hypergrid is a Python package for the concise declaration and manipulation of parameter grids, making hyperparameter optimization and batch job dispatch more manageable."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    ######
    ### Custom Dependencies Section Begin
    ######

    ######
    ### Custom Dependencies Section End
    ######
]

[project.urls]
"Homepage" = "https://github.com/justin-yan/hypergrid"

[dependency-groups]
dev = [
    "pytest>5",
    "hypothesis>5",
    "coverage>5",
    "ruff>0.2.1",
    "mypy>1.2"
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"hypergrid" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

#######
### Miscellaneous Tool Configuration
#######
[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["hypergrid"]

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules"
log_cli = true
log_cli_level = "WARN"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
disallow_any_unimported = true
allow_redefinition = false
ignore_errors = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

######
### Custom Directives Section Begin
######

######
### Custom Directives Section End
######
